--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ input:focus-visible{outline: 0;}
 @media only screen and (max-width:420px){
     .form-sec{padding: 30px;}
     .avatar-sec img{max-width: 70px;}
+    .main-screen {padding-top:0px;}
 }
 @media only screen and (max-width:375px){
     .form-sec { padding: 30px 20px;}
